--- a/firebase.json
+++ b/firebase.json
@@ -8,15 +8,41 @@
     ],
     "source": "functions"
   },
+  "storage": {
+    "rules": "storage.rules"
+  },
   "hosting": {
-    "public": "public",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
-  },
-  "storage": {
-    "rules": "storage.rules"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
+    "headers": [ {
+      "source" : "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
+      "headers" : [ {
+        "key" : "Access-Control-Allow-Origin",
+        "value" : "*"
+    } ]
+    }, {
+      "source" : "**/*.@(jpg|jpeg|gif|png)",
+      "headers" : [ {
+      "key" : "Cache-Control",
+      "value" : "max-age=7200"
+      } ]
+    }, {
+      "source" : "404.html",
+      "headers" : [ {
+      "key" : "Cache-Control",
+      "value" : "max-age=300"
+      } ]
+    } ],
+    "cleanUrls": true
   }
 }
